--- a/HW04_homework/WebApp/Views/Shared/_Layout.cshtml
+++ b/HW04_homework/WebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Vigeneres" asp-action="Index">Vigenere Encrypts</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="ShowAllUsers">Users</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
